Доработки замечаний по защите

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,19 +1,19 @@
 .button {
   text-decoration: none;
-}
 
-.button__main {
-  font-family: "Oswald", "Arial", sans-serif;
-  background-color: @main-green;
-  color: @main-white;
-  text-transform: uppercase;
+  &--main {
+    font-family: "Oswald", "Arial", sans-serif;
+    background-color: @main-green;
+    color: @main-white;
+    text-transform: uppercase;
 
-  &:hover {
-    background-color: @additional-green;
-  }
+    &:hover {
+      background-color: @additional-green;
+    }
 
-  &:active {
-    background-color: @additional-green;
-    color: @opacity-white;
+    &:active {
+      background-color: @additional-green;
+      color: @opacity-white;
+    }
   }
 }
