--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -104,11 +104,9 @@
   }
 
   .main-nav--nojs .main-nav__wrapper {
-    position: absolute;
-    top: 64px;
-    left: 0;
+    position: static;
 
-    width: 100%;
+    width: 100vw;
 
     text-align: center;
   }
