--- a/source/less/blocks/bundles.less
+++ b/source/less/blocks/bundles.less
@@ -252,19 +252,15 @@
     height: 12px;
     position: absolute;
 
-    left: 100px;
-    top: 55%;
+    margin-left: 16px;
+    margin-top: 1px;
 
     background-image: url("../img/bundles/arrow.svg");
     background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
-      left: 131px;
-      top: 60%;
-    }
-
-    @media (min-width: @desktop-width) {
-      left: 133px;
+      margin-left: 26px;
+      margin-top: 6px;
     }
   }
 
