--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,8 +1,3 @@
-.catalog__wrapper {
-  display: grid;
-  grid-template-rows: 1fr;
-}
-
 .catalog__list {
   list-style: none;
   margin: 0;
@@ -89,10 +84,13 @@
 
   @media (min-width: @desktop-width) {
     padding: 40px 36px 38px 37px;
+    padding-top: 160px;
     margin: 40px;
 
     width: 245px;
     min-height: 431px;
+
+    grid-template-rows: 1fr max-content max-content;
   }
 
   &--reveal {
