--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,5 @@
 .contacts {
-  height: 63px;
+  min-height: 63px;
 
   position: relative;
 
@@ -31,21 +31,22 @@
   list-style: none;
   padding: 0;
 
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  flex-flow: row wrap;
 
   margin-top: 14px;
   margin-bottom: 21px;
   margin-left: auto;
   margin-right: auto;
 
-  width: min-content;
-  column-gap: 22px;
+  width: 55%;
 
   @media (min-width: @tablet-width) {
-    width: min-content;
-    margin: 0 auto;
-    column-gap: 20px;
+    width: 68%;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 38%;
   }
 }
 
@@ -74,10 +75,6 @@
       padding-top: 4px;
       padding-right: 2px;
     }
-  }
-
-  &:last-child {
-    position: relative;
   }
 
   @media (min-width: @tablet-width) {
@@ -133,9 +130,7 @@
       width: 28px;
       height: 33px;
 
-      position: absolute;
-      left: -6px;
-      top: -2px;
+      margin-right: 5px;
     }
   }
 }
