--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -520,6 +520,10 @@
   @media (min-width: @desktop-width) {
     left: 50%;
     transform: translateX(-42%);
+
+    &:active {
+      box-shadow: 0 1px 2px 2px @basic-green;
+    }
   }
 }
 
