--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -163,6 +163,7 @@
 
   @media (min-width: @desktop-width) {
     margin-left: 0;
+    margin-bottom: 13px;
   }
 }
 
@@ -208,7 +209,16 @@
 }
 
 .extra__item-button {
+  padding: 11px 11px;
+
+  grid-column: ~"1 / -1";
+  grid-row: ~"-1 / -2";
+
+  text-align: center;
+  align-self: center;
+
   @media (min-width: @tablet-width) {
+    padding: 11px 0;
     margin: 0 37px;
     margin-bottom: 11px;
   }
