--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -206,6 +206,11 @@
 
     grid-template-columns: 1fr max-content;
   }
+
+  &--flex {
+    display: flex;
+    flex-flow: row wrap;
+  }
 }
 
 .main-form__label {
