--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -14,8 +14,8 @@
 
 .page-header__main-wrapper {
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
+  flex-flow: row wrap;
+  justify-content: center;
   align-items: center;
 
   width: 100%;
@@ -23,11 +23,42 @@
 
   @media (min-width: @tablet-width) {
     justify-content: flex-start;
+    flex-wrap: nowrap;
+  }
+}
+
+.page-header__logo-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+
+  min-height: 65px;
+  width: 100%;
+
+  margin-right: 67px;
+  margin-left: 20px;
+  padding-right: 42px;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+
+    min-height: unset;
+    width: unset;
+
+    padding: 0;
+    margin-top: 24px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 110px;
+    margin-top: 53px;
   }
 }
 
 .page-header__logo {
-  margin-left: 20px;
   margin-bottom: 2px;
 
   &:nth-child(2) {
@@ -48,16 +79,6 @@
       opacity: 1;
     }
   }
-
-  @media (min-width: @tablet-width) {
-    margin-left: 30px;
-    margin-top: 24px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-left: 110px;
-    margin-top: 53px;
-  }
 }
 
 .page-header__logo-icon {
@@ -68,8 +89,6 @@
 .page-header__logo-title {
   width: 101px;
   height: 18px;
-
-  margin-right: 52px;
 
   @media (min-width: @tablet-width) {
     display: none;
